# assignment-5-final-project-tj_individual

./: CMakeLists.txt  Proposal.md  Readme.md  task2.cpp
shader/: rabbitFragment.glsl  rabbitFragmentAreaLight.glsl  rabbitFragmentCrystal.glsl  rabbitFragmentIceEffect.glsl  sphereFragment.glsl  textureFragment.glsl  textureVertex.glsl  vertex.glsl
src/: rabbit.cpp  rabbitAreaLight.cpp  rabbitCrystal.cpp  rabbitIceEffect.cpp  sphere.cpp
